# CorrectiveRAG

./: .gitignore  README.md  pyproject.toml
code/: app.py  app_nemo.py  corrective_rag.ipynb  main.py  main_nemo.py
code/config/: nvidia.py
code/graph/: agent_builder.py  crag_logic.py  nodes.py
code/ingestion/: document_chunker.py  document_loader.py
code/models/: doc_eval.py  filter.py  state.py  web_query.py
code/nat_crag/: nemo_register.py  register.py
code/nemo_workflows/: __init__.py  base_workflow.py  context_manager.py  tools_registry.py  workflow_builder.py
code/nemo_workflows/tools/: __init__.py  evaluation_tool.py  generate_tool.py  refine_tool.py  retrieval_tool.py  rewrite_tool.py  supplement_tool.py
code/prompts/: answer_prompt.py  doc_eval_prompt.py  filter_prompt.py  rewrite_prompt.py
code/retrieval/: retriever_builder.py  vector_store_builder.py
