[project]
name = "3-corrective-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.14.3",
    "ipykernel>=7.3.0",
    "langchain>=1.3.10",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.2",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.6",
    "pypdf>=6.13.3",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
